--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p2>Ja tässä on vielä push-testi.</p>
+    <p>I'm hosted with GitHub Pages.</p>
+    <p2>Ja tässä on vielä push-testi.</p>
+    <img src="asd.png">
 </body>
 </html>
