--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Testing stuff.</title>
+</head>
 <body>
-<h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p2>Ja tässä on vielä push-testi.</p>
-    <img src="Kuvat\asd.png">
+
+    <h1>This is a heading.</h1>
+    <p>This is a paragraph.</p>
 </body>
 </html>
